browser/themes/shared/customizableui/panelUIOverlay.inc.css
/* ... */
panelview
toolbarbutton
buttonStateHover
#
widget
-
overflow
-
list
>
toolbarbutton
buttonStateHover
#
edit
-
controls
inAnyPanel
>
toolbarbutton
#
zoom
-
controls
inAnyPanel
>
toolbarbutton
.
customizationmode
-
button
#
BMB_bookmarksPopup
>
menu
buttonStateHover
#
BMB_bookmarksPopup
>
menuitem
buttonStateHover
{
background
-
image
:
-
moz
-
linear
-
gradient
(
hsla
(
0
0
%
100
%
.
6
)
hsla
(
0
0
%
100
%
.
1
)
)
;
border
-
color
:
hsla
(
210
54
%
20
%
.
15
)
hsla
(
210
54
%
20
%
.
2
)
hsla
(
210
54
%
20
%
.
25
)
;
box
-
shadow
:
0
1px
hsla
(
0
0
%
100
%
.
3
)
inset
0
1px
hsla
(
210
54
%
20
%
.
03
)
0
0
2px
hsla
(
210
54
%
20
%
.
1
)
;
}
panelview
toolbarbutton
buttonStateActive
.
customizationmode
-
button
:
not
(
[
disabled
]
)
:
hover
:
active
#
widget
-
overflow
-
list
>
toolbarbutton
buttonStateActive
#
BMB_bookmarksPopup
>
menu
buttonStateActive
#
BMB_bookmarksPopup
>
menuitem
buttonStateActive
{
background
-
image
:
-
moz
-
linear
-
gradient
(
hsla
(
0
0
%
100
%
.
6
)
hsla
(
0
0
%
100
%
.
1
)
)
;
background
-
color
:
hsla
(
210
54
%
20
%
.
15
)
;
border
-
color
:
hsla
(
210
54
%
20
%
.
3
)
hsla
(
210
54
%
20
%
.
35
)
hsla
(
210
54
%
20
%
.
4
)
;
box
-
shadow
:
0
1px
1px
hsla
(
210
54
%
20
%
.
1
)
inset
0
0
1px
hsla
(
210
54
%
20
%
.
2
)
inset
0
1px
0
hsla
(
210
54
%
20
%
0
)
0
0
2px
hsla
(
210
54
%
20
%
0
)
;
text
-
shadow
:
none
;
transition
:
none
;
}
#
BMB_bookmarksPopup
>
menu
#
BMB_bookmarksPopup
>
menuitem
{
font
:
inherit
;
}
#
BMB_bookmarksPopup
>
menu
:
not
(
[
disabled
=
"
true
"
]
)
#
BMB_bookmarksPopup
>
menuitem
:
not
(
[
disabled
=
"
true
"
]
)
{
color
:
inherit
;
}
#
BMB_bookmarksPopup
>
.
panel
-
arrowcontainer
>
.
panel
-
arrowcontent
>
.
popup
-
internal
-
box
>
.
autorepeatbutton
-
up
#
BMB_bookmarksPopup
>
.
panel
-
arrowcontainer
>
.
panel
-
arrowcontent
>
.
popup
-
internal
-
box
>
.
autorepeatbutton
-
down
{
-
moz
-
appearance
:
none
;
margin
-
top
:
0
;
margin
-
bottom
:
0
;
}
panelview
toolbarseparator
#
BMB_bookmarksPopup
>
menuseparator
{
-
moz
-
appearance
:
none
;
min
-
height
:
0
;
border
-
top
:
1px
solid
ThreeDShadow
;
margin
:
5px
0
;
}
#
PanelUI
-
historyItems
>
toolbarbutton
{
list
-
style
-
image
:
url
(
"
chrome
:
/
/
mozapps
/
skin
/
places
/
defaultFavicon
.
png
"
)
;
}
#
PanelUI
-
recentlyClosedWindows
>
toolbarbutton
>
.
toolbarbutton
-
icon
#
PanelUI
-
recentlyClosedTabs
>
toolbarbutton
>
.
toolbarbutton
-
icon
#
PanelUI
-
historyItems
>
toolbarbutton
>
.
toolbarbutton
-
icon
{
width
:
16px
;
height
:
16px
;
}
#
PanelUI
-
footer
.
panel
-
multiview
-
anchor
#
PanelUI
-
footer
.
panel
-
multiview
-
anchor
>
#
PanelUI
-
help
toolbarbutton
.
panel
-
multiview
-
anchor
{
background
-
color
:
Highlight
;
background
-
image
:
linear
-
gradient
(
rgba
(
255
255
255
0
.
3
)
rgba
(
255
255
255
0
)
)
;
background
-
repeat
:
repeat
-
x
;
color
:
HighlightText
;
}
#
bookmarks
-
menu
-
button
[
cui
-
areatype
=
"
menu
-
panel
"
]
>
.
toolbarbutton
-
menubutton
-
dropmarker
{
display
:
none
;
}
#
edit
-
controls
inAnyPanel
>
toolbarbutton
#
zoom
-
controls
inAnyPanel
>
toolbarbutton
{
-
moz
-
box
-
flex
:
1
;
}
#
search
-
container
inAnyPanel
{
width
:
menuPanelWidth
;
}
#
edit
-
controls
inAnyPanel
>
toolbarbutton
#
zoom
-
controls
inAnyPanel
>
toolbarbutton
{
-
moz
-
appearance
:
none
;
}
#
edit
-
controls
inAnyPanel
>
toolbarbutton
[
disabled
]
>
.
toolbarbutton
-
icon
#
zoom
-
controls
inAnyPanel
>
toolbarbutton
[
disabled
]
>
.
toolbarbutton
-
icon
{
opacity
:
.
25
;
}
#
edit
-
controls
.
overflowedItem
>
toolbarbutton
>
.
toolbarbutton
-
text
{
display
:
none
;
}
#
zoom
-
controls
[
cui
-
areatype
=
"
toolbar
"
]
>
#
zoom
-
reset
-
button
>
.
toolbarbutton
-
text
{
%
ifdef
XP_MACOSX
min
-
width
:
6ch
;
%
else
min
-
width
:
7ch
;
%
endif
}
#
zoom
-
controls
inAnyPanel
>
#
zoom
-
reset
-
button
{
list
-
style
-
image
:
none
;
}
#
edit
-
controls
inAnyPanel
>
#
paste
-
button
#
zoom
-
controls
inAnyPanel
>
#
zoom
-
in
-
button
{
-
moz
-
border
-
start
-
width
:
1px
;
-
moz
-
border
-
start
-
style
:
solid
;
}
#
edit
-
controls
inAnyPanel
>
#
cut
-
button
:
-
moz
-
locale
-
dir
(
ltr
)
#
edit
-
controls
inAnyPanel
>
#
paste
-
button
:
-
moz
-
locale
-
dir
(
rtl
)
#
zoom
-
controls
inAnyPanel
>
#
zoom
-
out
-
button
:
-
moz
-
locale
-
dir
(
ltr
)
#
zoom
-
controls
inAnyPanel
>
#
zoom
-
in
-
button
:
-
moz
-
locale
-
dir
(
rtl
)
{
border
-
top
-
right
-
radius
:
2px
;
border
-
bottom
-
right
-
radius
:
2px
;
}
#
edit
-
controls
inAnyPanel
>
#
cut
-
button
:
-
moz
-
locale
-
dir
(
rtl
)
#
edit
-
controls
inAnyPanel
>
#
paste
-
button
:
-
moz
-
locale
-
dir
(
ltr
)
#
zoom
-
controls
inAnyPanel
>
#
zoom
-
out
-
button
:
-
moz
-
locale
-
dir
(
rtl
)
#
zoom
-
controls
inAnyPanel
>
#
zoom
-
in
-
button
:
-
moz
-
locale
-
dir
(
ltr
)
{
border
-
top
-
left
-
radius
:
2px
;
border
-
bottom
-
left
-
radius
:
2px
;
}
#
widget
-
overflow
>
.
panel
-
arrowcontainer
>
.
panel
-
arrowcontent
{
padding
:
0
;
}
#
widget
-
overflow
-
scroller
{
max
-
height
:
30em
;
overflow
-
y
:
auto
;
overflow
-
x
:
hidden
;
margin
-
top
:
10px
;
margin
-
bottom
:
10px
;
}
#
widget
-
overflow
-
list
{
width
:
menuPanelWidth
;
padding
-
left
:
10px
;
padding
-
right
:
10px
;
}
#
widget
-
overflow
-
list
>
.
overflowedItem
{
width
:
100
%
;
max
-
width
:
menuPanelWidth
;
min
-
height
:
36px
;
background
-
repeat
:
no
-
repeat
;
background
-
position
:
0
center
;
}
#
widget
-
overflow
-
list
>
toolbarbutton
#
widget
-
overflow
-
list
>
toolbarbutton
>
toolbarbutton
{
-
moz
-
box
-
align
:
center
;
-
moz
-
box
-
orient
:
horizontal
;
}
#
widget
-
overflow
-
list
>
toolbarbutton
>
.
toolbarbutton
-
text
#
widget
-
overflow
-
list
>
#
bookmarks
-
menu
-
button
>
toolbarbutton
>
.
toolbarbutton
-
text
{
text
-
align
:
start
;
-
moz
-
padding
-
start
:
.
5em
;
}
#
widget
-
overflow
-
list
>
#
edit
-
controls
#
widget
-
overflow
-
list
>
#
zoom
-
controls
{
min
-
height
:
28px
;
}
.
PanelUI
-
characterEncodingView
-
list
>
toolbarbutton
[
current
]
{
-
moz
-
padding
-
start
:
2px
;
}
/* ... */

